continue working on value mapping.